--- a/examples/sphere_PS3_data.ipynb
+++ b/examples/sphere_PS3_data.ipynb
@@ -134,7 +134,7 @@
    "source": [
     "# Plot results\n",
     "\n",
-    "First plot `FFSAS` results at different iterations."
+    "First plot `ffsas` results at different iterations."
    ]
   },
   {
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now compare `FFSAS`, `McSAS` and `SasView` results. Because the `McSAS` and `SasView` are very smooth, we compare them to an early `FFSAS` result (at 30 iterations)."
+    "Now compare `ffsas`, `McSAS` and `SasView` results. Because the `McSAS` and `SasView` are very smooth, we compare them to an early `ffsas` result (at 30 iterations)."
    ]
   },
   {
