--- a/examples/sphere_I22_data.ipynb
+++ b/examples/sphere_I22_data.ipynb
@@ -353,6 +353,8 @@
     "plt.plot(q, I, ls='-.', lw=1.5, zorder=-10000000, color='w',\n",
     "         label=r'$\\hat{w}(r)=60\\%\\mathcal{N}(613, 0^2)+40\\%\\mathcal{N}(1058, 0^2)$')\n",
     "\n",
+    "plt.xlim(q[0] / 1.1, q[-50])\n",
+    "plt.ylim(.5e-4, 10**3.5)\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.xlabel('Scattering vector, $q$ (\\AA$^{-1}$)')\n",
@@ -361,7 +363,13 @@
     "handles.insert(0, handles.pop())\n",
     "labels.insert(0, labels.pop())\n",
     "plt.legend(handles, labels, prop={'size': 11}, loc=[1.03,0.169], labelspacing=.5)\n",
-    "plt.xlim(q[0]/1.1, q[-50])\n",
+    "\n",
+    "# add some texts for paper\n",
+    "plt.axvline(0.008, c='k', lw=1, ymin=.8)\n",
+    "plt.axvline(0.04, c='k', lw=1, ymin=.8)\n",
+    "plt.text(0.004, 1e3, r'low-$q$', va='top')\n",
+    "plt.text(0.014, 1e3, r'mid-$q$', va='top')\n",
+    "plt.text(0.08, 1e3, r'high-$q$', va='top', ha='center')\n",
     "\n",
     "# save for paper\n",
     "plt.savefig(paper_fig_dir / 'I22.pdf', bbox_inches='tight', facecolor='w', padding_inches=.05)\n",
