--- a/examples/sphere_PS3_data.ipynb
+++ b/examples/sphere_PS3_data.ipynb
@@ -194,12 +194,12 @@
     "        plt.text(r_top - 1, w_hat[i_min + max_loc] - 2.2, \n",
     "                 r'$\\mathcal{N}(%d,%d^2)$' % (round(r_top.item()), \n",
     "                                              round(stddev / len(r) * (r.max() - r.min()).item())), \n",
-    "                 ha='left', va='center', fontsize=12, rotation=45)\n",
+    "                 ha='left', va='center', fontsize=13, rotation=45)\n",
     "    else:\n",
     "        plt.text(r_top - 20, max(w_hat[i_min + max_loc] + 1., .7), \n",
     "                 r'$\\mathcal{N}(%d,%d^2)$' % (round(r_top.item()), \n",
     "                                              round(stddev / len(r) * (r.max() - r.min()).item())), \n",
-    "                 ha='left', va='bottom', fontsize=12, rotation=45)\n",
+    "                 ha='left', va='bottom', fontsize=13, rotation=45)\n",
     "plt.ylim(None, 17)\n",
     "\n",
     "# legend                 \n",
@@ -210,8 +210,8 @@
     "cb = plt.colorbar(sm, ticks=np.arange(100,1001,100), \n",
     "                  boundaries=np.arange(50,1101,100),\n",
     "                  cax=cbaxes, orientation='horizontal')\n",
-    "cb.ax.tick_params(labelsize=12) \n",
-    "cb.ax.set_title('Num. iterations', fontsize=12)\n",
+    "cb.ax.tick_params(labelsize=13) \n",
+    "cb.ax.set_title('Num. iterations', fontsize=13)\n",
     "cb.ax.tick_params(axis='x', labelrotation = 45)\n",
     "\n",
     "# save for paper\n",
@@ -289,7 +289,7 @@
     "plt.xlim(400, 800)\n",
     "plt.ylabel(r'Volume weight, $\\hat{w}$ (\\%)')\n",
     "plt.xlabel(r'Radius, $r$ (\\AA)')\n",
-    "plt.legend(loc=[0.01,.24],prop={'size': 11})\n",
+    "plt.legend(loc=[0.01, .27], prop={'size': 12}, labelspacing=.3)\n",
     "plt.title(r\"(b) $\\hat{w}_v(r)$'s from different methods\")\n",
     "\n",
     "# save for paper\n",
