--- a/examples/ellipsoid.ipynb
+++ b/examples/ellipsoid.ipynb
@@ -168,7 +168,7 @@
     "# (SLD - SLD_solvent) ^ 2\n",
     "drho = 1.\n",
     "\n",
-    "# comupute the Green's function and volume\n",
+    "# compute the Green's tensor\n",
     "G = Ellipsoid.compute_G_mini_batch([qx, qy],  par_dict, {'drho': drho}, batch_size=8, device=device)\n",
     "\n",
     "# define the G-based SAS system\n",
