--- a/examples/sphere.ipynb
+++ b/examples/sphere.ipynb
@@ -158,7 +158,7 @@
     "# (SLD - SLD_solvent) ^ 2\n",
     "drho = 25.\n",
     "\n",
-    "# comupute the Green's function and volume\n",
+    "# compute the Green's tensor\n",
     "G = Sphere.compute_G_mini_batch([q], {'r': r}, {'drho': drho})\n",
     "\n",
     "# compute the ground truth of xi\n",
