--- a/examples/cylinder_user_defined.ipynb
+++ b/examples/cylinder_user_defined.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exampe: cylinder as a user-defined model\n",
+    "# Example: cylinder as a user-defined model\n",
     "\n",
     "This notebook shows how to implement the `cylinder` model as a user-defined model class in `ffsas`, which is then used for modelling and inversion. The `cylinder` model have four parameters: length $l$, radius $r$, angle to beam $\\theta$ and rotation about beam $\\phi$. "
    ]
