--- a/examples/ellipsoid.ipynb
+++ b/examples/ellipsoid.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exampe: ellipsoid\n",
+    "# Example: ellipsoid\n",
     "\n",
     "This notebook shows how to use `ffsas` to invert for the parameter distributions of a `ellipsoid` model, including polar radius $r_p$, equatorial radius $r_e$, angle to beam $\\theta$ and rotation about beam $\\phi$."
    ]
