--- a/examples/sphere.ipynb
+++ b/examples/sphere.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exampe: sphere\n",
+    "# Example: sphere\n",
     "\n",
     "This notebook shows how to use `ffsas` to invert for the radius distribution of a `sphere` model. It uses the [SASView/SASModels](http://www.sasview.org/docs/user/models/sphere.html) unit system."
    ]
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot the ground truths:"
+    "Plot the ground truth:"
    ]
   },
   {
@@ -309,7 +309,6 @@
     "    else:\n",
     "        ax[i][0].set_xlabel(r'Radius, $r$ (\\AA)')\n",
     "    ax[i][0].set_xlim(500,1000)\n",
-    "    \n",
     "    \n",
     "    \n",
     "    #####################\n",
