--- a/examples/sphere_PS3_data.ipynb
+++ b/examples/sphere_PS3_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exampe: sphere with PS3 dataset\n",
+    "# Example: sphere with PS3 dataset\n",
     "\n",
     "This notebook shows how to use `ffsas` to invert for the radius distribution of a `Sphere` model with a real dataset called \"PS3\". It uses the [SASView/SASModels](http://www.sasview.org/docs/user/models/sphere.html) unit system."
    ]
