--- a/examples/cylinder_large_scale.ipynb
+++ b/examples/cylinder_large_scale.ipynb
@@ -564,13 +564,17 @@
     "scaling_factor_sensitivity = 1e9\n",
     "for i, axis in enumerate(axes):\n",
     "    var = variables[i]\n",
+    "    if var in ['theta', 'phi']:\n",
+    "        x = torch.rad2deg(par_dict[var])\n",
+    "    else:\n",
+    "        x = par_dict[var]\n",
     "    # true\n",
-    "    axis.plot(par_dict[var], w_true_dict[var] * 100, '-o', label='Truth', markersize=4)\n",
+    "    axis.plot(x, w_true_dict[var] * 100, '-o', label='Truth', markersize=4)\n",
     "    # inverted\n",
-    "    axis.plot(par_dict[var], final_w_dict[var] * 100, label='Inverted')\n",
+    "    axis.plot(x, final_w_dict[var] * 100, label='Inverted')\n",
     "    # S^-1\n",
     "    sens_scaled = scaling_factor_sensitivity / res_dict_sens['sens_w_dict'][var]\n",
-    "    axis.fill_between(par_dict[var], \n",
+    "    axis.fill_between(x, \n",
     "                      (final_w_dict[var] - abs(sens_scaled)) * 100, \n",
     "                      (final_w_dict[var] + abs(sens_scaled)) * 100, \n",
     "                      alpha=.3, color='gray', zorder=-100, label=r'$S^{-1}$')\n",
@@ -595,8 +599,8 @@
     "ax[1, 1].set_ylabel(r'$w(\\phi)$ (\\%)')\n",
     "ax[0, 0].set_xlim(par_dict['l'].min(), par_dict['l'].max())\n",
     "ax[0, 1].set_xlim(par_dict['r'].min(), par_dict['r'].max())\n",
-    "ax[1, 0].set_xlim(par_dict['theta'].min(), par_dict['theta'].max())\n",
-    "ax[1, 1].set_xlim(par_dict['phi'].min(), par_dict['phi'].max())\n",
+    "ax[1, 0].set_xlim(torch.rad2deg(par_dict['theta'].min()), torch.rad2deg(par_dict['theta'].max()))\n",
+    "ax[1, 1].set_xlim(torch.rad2deg(par_dict['phi'].min()), torch.rad2deg(par_dict['phi'].max()))\n",
     "ax[0, 0].set_yticks([0, 3, 6, 9])\n",
     "ax[0, 1].set_yticks([0, 4, 8])\n",
     "ax[1, 0].set_yticks([0, 4, 8])\n",
