--- a/examples/01_sphere_benchmark/sphere_benchmark.ipynb
+++ b/examples/01_sphere_benchmark/sphere_benchmark.ipynb
@@ -287,7 +287,7 @@
     "plt.xlim(r[0], r[-1])\n",
     "\n",
     "# Irena\n",
-    "vol_frac = np.loadtxt('irena_output/vol_frac.txt')\n",
+    "vol_frac = np.loadtxt('irena/output_wv(r).txt')[:len(r)]\n",
     "w_irena = vol_frac / r ** 3\n",
     "w_irena /= w_irena.sum()\n",
     "plot_irena = plt.errorbar(r[::st], w_irena[::st] * 100, yerr=None, \n",
@@ -296,9 +296,9 @@
     "\n",
     "# SasView\n",
     "# these numbers are from the screenshots\n",
-    "A_scale = 0.26233\n",
+    "A_scale = 0.24676\n",
     "A_radius = 500.02\n",
-    "B_scale = 0.80083\n",
+    "B_scale = 0.75329\n",
     "B_radius = 699.97\n",
     "A_PD = 0.020124\n",
     "B_PD = 0.028707\n",
@@ -319,7 +319,7 @@
     "                            markersize=style_sasview[3], label='SasView')\n",
     "\n",
     "# McSAS\n",
-    "mcsas_data = np.loadtxt('mcsas_output/num_frac.dat', skiprows=1)\n",
+    "mcsas_data = np.loadtxt('mcsas/output_w(r).dat', skiprows=1)\n",
     "r_low = mcsas_data[:, 0] * 1e10\n",
     "w_low = mcsas_data[:, 2]\n",
     "std_w_low = mcsas_data[:, 3]\n",
@@ -378,19 +378,18 @@
     "plt.xlim(q[0], q[-1])\n",
     "\n",
     "# Irena\n",
-    "I_irena = np.loadtxt('irena_output/intensity_fit.txt')\n",
+    "I_irena = np.loadtxt('irena/output_I(q).txt')\n",
     "I_irena += b_true  # Irena saves data without background\n",
     "plot_mcsas = plt.errorbar(q[::st], I_irena[::st], yerr=None, c=style_irena[0], lw=0, \n",
     "                          fmt=style_irena[2], markersize=style_irena[3], label='Irena')\n",
     "\n",
     "# SasView\n",
-    "# we do not invert xi and b in SasView\n",
-    "I_sasview = g_sys.compute_intensity({'r': w_sasview}, xi_true, b_true)\n",
+    "I_sasview = np.loadtxt('sasview/output_I(q).txt', skiprows=1)[:, 1]\n",
     "plot_sasview = plt.errorbar(q[::st], I_sasview[::st], yerr=None, c=style_sasview[0], lw=0, \n",
     "                            fmt=style_sasview[2], markersize=style_sasview[3], label='SasView')\n",
     "\n",
     "# McSAS\n",
-    "mc_data = np.loadtxt('mcsas_output/intensity_fit.dat', skiprows=1)\n",
+    "mc_data = np.loadtxt('mcsas/output_I(q).dat', skiprows=1)\n",
     "q_low = mc_data[:, 0] / 1e10\n",
     "I_low = mc_data[:, 3]\n",
     "I_mcsas = interpolate.interp1d(q_low, I_low, fill_value=\"extrapolate\")(q)\n",
@@ -453,18 +452,10 @@
     "\n",
     "print('wct / sec')\n",
     "print(f'Irena: 1.5')\n",
-    "print(f'SasView: 0.04')\n",
+    "print(f'SasView: 0.0979')\n",
     "print(f'McSAS: {3.30376664797 * 60}')\n",
     "print(f'FFSAS: {result_dict[\"wct\"]}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eaff66ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
