--- a/examples/01_sphere_benchmark/sphere_benchmark.ipynb
+++ b/examples/01_sphere_benchmark/sphere_benchmark.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Example: benchmark for polydisperse spheres\n",
     "\n",
-    "In this notebook, we conduct a benchmark for size distribution inversion of polydisperse spheres using synthetic data. The ground truth of the size distribution contains two populations, a Gaussian and a Boltzmann. We benchmark three codes: `Irena`, `SasView`, `McSAS` and `ffsas`. This notebook uses the [SASView/SASModels](http://www.sasview.org/docs/user/models/sphere.html) unit system."
+    "In this notebook, we conduct a benchmark for size distribution inversion of polydisperse spheres using synthetic data. The ground truth of the size distribution contains two populations, a Gaussian and a Boltzmann. We benchmark four codes: `Irena`, `SasView`, `McSAS` and `ffsas`. \n",
+    "\n",
+    "This notebook uses the [SASView/SASModels](http://www.sasview.org/docs/user/models/sphere.html) unit system."
    ]
   },
   {
