--- a/examples/01_sphere_benchmark/sphere_benchmark.ipynb
+++ b/examples/01_sphere_benchmark/sphere_benchmark.ipynb
@@ -430,7 +430,7 @@
     "def compute_chi2(I_fit):\n",
     "    if not isinstance(I_fit, torch.Tensor):\n",
     "        I_fit = torch.from_numpy(I_fit)\n",
-    "    return torch.mean(((I_fit - I_true) / I_true_std) ** 2)\n",
+    "    return torch.norm((I_fit - I_true) / I_true_std) ** 2\n",
     "    \n",
     "print(f'Intensity chi2')\n",
     "print(f'Irena: {compute_chi2(I_irena)}')\n",
@@ -443,7 +443,7 @@
     "def compute_delta_w(w_fit):\n",
     "    if not isinstance(w_fit, torch.Tensor):\n",
     "        w_fit = torch.from_numpy(w_fit)\n",
-    "    return torch.sqrt(torch.mean((w_fit - w_true) ** 2))\n",
+    "    return torch.norm(w_fit - w_true)\n",
     "\n",
     "print(f'|delta w|')\n",
     "print(f'Irena: {compute_delta_w(w_irena)}')\n",
