--- a/examples/01_sphere_benchmark/sphere_benchmark.ipynb
+++ b/examples/01_sphere_benchmark/sphere_benchmark.ipynb
@@ -343,7 +343,7 @@
     "                          markersize=style_ffsas[3], capsize=1, lw=.5, label='FFSAS')\n",
     "\n",
     "# plot and save\n",
-    "plt.legend(handlelength=1)\n",
+    "plt.legend(handlelength=1, facecolor='whitesmoke')\n",
     "if reproduce_paper_fig:\n",
     "    plt.savefig(paper_fig_dir / 'bench_w.pdf', \n",
     "                bbox_inches='tight', facecolor='w', pad_inches=.1)\n",
@@ -404,7 +404,7 @@
     "                          fmt=style_ffsas[2], markersize=style_ffsas[3], label='FFSAS')\n",
     "\n",
     "# plot and save\n",
-    "plt.legend(handlelength=1)\n",
+    "plt.legend(handlelength=1, facecolor='whitesmoke')\n",
     "if reproduce_paper_fig:\n",
     "    plt.savefig(paper_fig_dir / 'bench_I.pdf', \n",
     "                bbox_inches='tight', facecolor='w', pad_inches=.1)\n",
