--- a/examples/02_sphere_challenge/sphere_challenge.ipynb
+++ b/examples/02_sphere_challenge/sphere_challenge.ipynb
@@ -304,24 +304,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "10e4a936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot options\n",
+    "plt.rcParams.update({'font.size': 22})\n",
+    "plt.rcParams.update({'legend.fontsize': 20})\n",
+    "plt.rcParams.update({'axes.titlesize': 22})\n",
+    "plt.rcParams.update({'lines.linewidth': 2})\n",
+    "\n",
+    "colors = plt.rcParams['axes.prop_cycle'].by_key()['color']\n",
+    "c_data = colors[0]\n",
+    "c_ffsas = colors[1]\n",
+    "c_irena = colors[3]\n",
+    "c_mcsas = colors[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ef78965e",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "colors = plt.rcParams['axes.prop_cycle'].by_key()['color']\n",
-    "plt.rcParams.update({'font.size': 22})\n",
-    "plt.rcParams.update({'legend.fontsize': 20})\n",
-    "plt.rcParams.update({'axes.titlesize': 22})\n",
-    "plt.rcParams.update({'lines.linewidth': 2})\n",
-    "\n",
-    "c_data = colors[0]\n",
-    "c_ffsas = colors[1]\n",
-    "c_irena = colors[3]\n",
-    "c_mcsas = colors[6]\n",
-    "\n",
-    "# set up figure\n",
     "fig, ax = plt.subplots(nrows=len(results) + 2, ncols=2, dpi=200, \n",
     "                       figsize=(18, (len(results) + 1) * 3), squeeze=False,\n",
     "                       gridspec_kw={'height_ratios': [1] * len(results) + [.05, 1]})\n",
