--- a/examples/02_sphere_challenge/sphere_challenge.ipynb
+++ b/examples/02_sphere_challenge/sphere_challenge.ipynb
@@ -344,7 +344,7 @@
     "    # inverted\n",
     "    plot_fit = ax[i][0].plot(r_high, w_high * 100, c=c_ffsas)\n",
     "    plot_err = ax[i][0].fill_between(r_high, (w_high - std_w_high) * 100, (w_high + std_w_high) * 100, \n",
-    "                                     alpha=.5, color='gray', zorder=-100)\n",
+    "                                     alpha=.4, color='gray', zorder=-100)\n",
     "    dw_norm = torch.norm(w_true_high - w_high)\n",
     "    ax[i][0].set_title(r'$w(r)$: bins=%d, $|\\Delta\\mathbf{w}|$=%.2E' % (\n",
     "        reso, dw_norm))\n",
@@ -362,9 +362,9 @@
     "    ax[i][1].errorbar(q[::st], I_true[::st], I_true[::st] / 1.01, \n",
     "                      markerfacecolor='none', markeredgecolor=c_data, ecolor=c_data, fmt='s',  \n",
     "                      markersize=8, capsize=2, lw=1,\n",
-    "                      zorder=-10, label=r'$I_\\mathrm{true}$')\n",
+    "                      zorder=-10, label='Truth')\n",
     "    # fitted\n",
-    "    ax[i][1].plot(q, I, c=c_ffsas, label=r'$I_\\mathrm{FFSAS}$')\n",
+    "    ax[i][1].plot(q, I, c=c_ffsas, label='FFSAS')\n",
     "    chi2 = torch.norm((I_true - I) / I_true_std) ** 2\n",
     "    ax[i][1].set_title(r'$I(q)$: bins=%d, $\\chi^2$=%.2E, wt=%.1f sec' % (\n",
     "        reso, chi2, wct))\n",
@@ -384,8 +384,8 @@
     "                     ha='right', va='top', fontsize=22, color='k')\n",
     "\n",
     "# legend\n",
-    "ax[0][0].legend([plot_true, (plot_fit[0], plot_err)],\n",
-    "                [r'$w_\\mathrm{true}$', r'$w_\\mathrm{FFSAS}$'],\n",
+    "ax[0][0].legend([plot_true, (plot_err, plot_fit[0])],\n",
+    "                ['Truth', 'FFSAS'],\n",
     "                loc=(.75, .52), handlelength=1, facecolor='whitesmoke', labelspacing=.3)\n",
     "handles, labels = ax[0][1].get_legend_handles_labels()\n",
     "ax[0][1].legend([handles[idx] for idx in [1, 0]], [labels[idx] for idx in [1, 0]], \n",
@@ -419,9 +419,9 @@
     "\n",
     "# plot\n",
     "ax[-1][0].scatter(r_high, w_true_high * 100, lw=1, \n",
-    "                  facecolors='none', edgecolor=c_data, s=40, label='$w_\\mathrm{true}$')\n",
-    "ax[-1][0].plot(r_high, w_irena * 100, c=c_irena, ls='--', zorder=100, label='$w_\\mathrm{Irena}$')\n",
-    "ax[-1][0].plot(r_high, w_mcsas * 100, c=c_mcsas, label='$w_\\mathrm{McSAS}$')\n",
+    "                  facecolors='none', edgecolor=c_data, s=40, label='Truth')\n",
+    "ax[-1][0].plot(r_high, w_irena * 100, c=c_irena, ls='--', zorder=100, label='Irena')\n",
+    "ax[-1][0].plot(r_high, w_mcsas * 100, c=c_mcsas, label='McSAS')\n",
     "ax[-1][0].set_title(r'$w(r)$: $|\\Delta\\mathbf{w}|_\\mathrm{Irena}$=%.2E, '\n",
     "                    r'$|\\Delta\\mathbf{w}|_\\mathrm{McSAS}$=%.2E' % (dw_norm_irena, dw_norm_mcsas))\n",
     "ax[-1][0].set_ylim(-0.1, 1.1)\n",
@@ -453,9 +453,9 @@
     "ax[-1][1].errorbar(q[::st], I_true[::st], I_true[::st] / 1.01, \n",
     "                   markerfacecolor='none', markeredgecolor=c_data, ecolor=c_data, fmt='s',  \n",
     "                   markersize=8, capsize=2, lw=1,\n",
-    "                   zorder=-10, label=r'$I_\\mathrm{true}$')\n",
-    "ax[-1][1].plot(q, I_irena, c=c_irena, ls='--', zorder=5, label=r'$I_\\mathrm{Irena}$, wt=3 sec')\n",
-    "ax[-1][1].plot(q, I_mcsas, c=c_mcsas, label=r'$I_\\mathrm{McSAS}$, wt=%d min' % wct_mcsas_min)\n",
+    "                   zorder=-10, label='Truth')\n",
+    "ax[-1][1].plot(q, I_irena, c=c_irena, ls='--', zorder=5, label='Irena, wt=3 sec')\n",
+    "ax[-1][1].plot(q, I_mcsas, c=c_mcsas, label='McSAS, wt=%d min' % wct_mcsas_min)\n",
     "ax[-1][1].set_title(r'$I(q)$: $\\chi^2_\\mathrm{Irena}$=%.2E, '\n",
     "                    r'$\\chi^2_\\mathrm{McSAS}$=%.2E' % (chi2_irena, chi2_mcsas))\n",
     "ax[-1][1].set_xscale('log')\n",
