--- a/examples/02_sphere_challenge/sphere_challenge.ipynb
+++ b/examples/02_sphere_challenge/sphere_challenge.ipynb
@@ -470,7 +470,7 @@
     "\n",
     "# save figure for paper \n",
     "if reproduce_paper_fig:\n",
-    "    plt.savefig(paper_fig_dir / 'sphere_challenge.pdf', \n",
+    "    plt.savefig(paper_fig_dir / 'sphere.pdf', \n",
     "                bbox_inches='tight', facecolor='w', pad_inches=.1)\n",
     "plt.show()"
    ]
